--- a/client/build.gradle
+++ b/client/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 apply plugin: 'application'
 group 'net.savagellc'
-version '1.3'
+version '1.4'
 
 mainClassName = "net.savagellc.trackx.TestMain"
 sourceCompatibility = 1.8
-//compileJava.options.fork = true
-//compileJava.options.forkOptions.executable = '/Library/Java/JavaVirtualMachines/jdk1.8.0_221.jdk/Contents/Home/bin/javac'
+compileJava.options.fork = true
+compileJava.options.forkOptions.executable = '/Library/Java/JavaVirtualMachines/jdk1.8.0_221.jdk/Contents/Home/bin/javac'
 repositories {
     mavenCentral()
         maven {
